--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,11 +6,10 @@
     <title>Mybray</title>
 </head>
 <body>
-  Before
   <br>
+  <%- include('../partials/header.ejs')%>
   <%- body%>
   <br>
-  After
     
 </body>
 </html>
